--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "simple-tailwind-starter",
+  "name": "clippy",
   "version": "1.0.0",
-  "description": "Simple file structure for Tailwind projects",
+  "description": "Landing page for clippy, a clipboard manager",
   "main": "index.js",
   "scripts": {
     "watch": "tailwindcss -i ./input.css -o ./css/style.css --watch",
     "build": "tailwindcss -i ./input.css -o ./css/style.css"
   },
-  "author": "Brad Traversy",
+  "author": "Syed Umair Ali",
   "license": "MIT",
   "devDependencies": {
     "tailwindcss": "^3.0.24"
